test/error/MainParams.fu
public static class Test
{
	public static void Main( //ERROR: 'Main' method must have no parameters or one 'string[]' parameter
		int argc, string[] argv)
	{
	}
}

